@@ -1,8 +1,17 @@
-2012-12-23  Jeremy Bennett <jeremy.bennett@embecosm.com>
+2013-01-10  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* arc-init.sh (run_check, save_res): move functions to run tests
+	and process results to this script. Clean up recording of results.
+	* run-elf32-tests.sh, run-uclibc-tests.sh: New scripts
+	incorporating target specific code from run-tests.sh.
+	* run-tests.sh: split ELF and Linux tests out into their own
+	scripts. Add options to allow just one or the other to be run.
+
+2013-01-08  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
 	* run-tests.sh: Minor tidy ups to directory names etc.
 
-2012-12-23  Jeremy Bennett <jeremy.bennett@embecosm.com>
+2013-01-08  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
 	* run-tests.sh: Script to run all the regression tests.
 
